# TheGuildGenesis

./: LINKEDIN_BACKEND_IMPLEMENTATION.md  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json
.astro/: settings.json
backend/: .env.example  Cargo.toml  Dockerfile  Procfile  README.md
discord-bot/: Dockerfile  README.md  env.example  package-lock.json  package.json  tsconfig.json
frontend/: Dockerfile  Procfile  package-lock.json  package.json
indexer/: Cargo.toml  Dockerfile
indexer/migrations/: 001_initial_schema.sql  101_indexer_initial_schema.sql
indexer/src/: database.rs  main.rs
indexer/src/application/commands/: get_indexing_status.rs  index_logs.rs  index_logs_by_filter.rs  mod.rs
indexer/src/application/dtos/: indexing_dtos.rs  mod.rs
indexer/src/application/queries/: poll.rs
indexer/src/domain/: mod.rs
indexer/src/domain/entities/: ethereum_event.rs  ethereum_log.rs  mod.rs
indexer/src/domain/repositories/: .#ethereum_event_repository.rs  ethereum_event_repository.rs  ethereum_log_repository.rs  mod.rs
indexer/src/domain/services/: ethereum_event_polling_service.rs  indexing_service.rs  mod.rs
indexer/src/domain/value_objects/: mod.rs
indexer/src/infrastructure/repositories/: mod.rs  postgres_ethereum_event_repository.rs  postgres_ethereum_log_repository.rs
indexer/src/infrastructure/services/: mod.rs
indexer/src/presentation/: api.rs  handlers.rs  middlewares.rs  mod.rs
indexer/src/presentation/handlers/: list_events_handler.rs  poll_handler.rs
scripts/: test_admin_delete.sh  test_admin_distributions.sh  (+1 more)
(+187 files in other folders)
